tests/integration/snapshots/integration__conformance__n_number_infinity.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
[Infinity]
stderr ---
error: unexpected character `I`. expected start of a json value
 --> stdin:1:2
  |
1 | [Infinity]
  |  ^
